--- a/ue02_typescript/package.json
+++ b/ue02_typescript/package.json
@@ -11,6 +11,15 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^3.2.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-using": "^0.1.1",
+    "merge-stream": "^1.0.1",
+    "run-sequence": "^2.2.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   }
 }
