--- a/ue02_typescript/package.json
+++ b/ue02_typescript/package.json
@@ -1,16 +1,20 @@
 {
   "name": "ue02_typescript",
   "version": "0.0.1",
-  "description": "Erstes Typescript Programm FIV",
+  "description": "Typescript Programm FIVU",
   "main": "main.js",
   "scripts": {
-    "build": "echo \"not implementet yet\"",
+    "build": "echo \" Hat net hingehaut\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Emil Berger",
+  "author": "Berger",
+  "private": true,
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.4"
+  },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.2.0",
@@ -20,6 +24,6 @@
     "merge-stream": "^1.0.1",
     "run-sequence": "^2.2.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.3"
   }
 }
