Attach Mode for Debugging

--- a/ue02_typescript/.vscode/launch.json
+++ b/ue02_typescript/.vscode/launch.json
@@ -17,6 +17,12 @@
             "sourceMaps": true,
             "preLaunchTask": "build",
             "smartStep": true
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach",
+            "port": 9229
         }
     ]
 }
